k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: azurephotoflow
  labels:
    name: azurephotoflow
    app: azurephotoflow
